[project]
name = "cartpole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium[classic-control]>=1.0.0",
    "numpy>=1.24.4",
    "protobuf<=3.20.0",
    "pygame>=2.6.1",
    "pyglet>=2.0.20",
    "stable-baselines3>=1.10.0",
    "tensorboard>=2.14.0",
    "tensorflow-macos>=2.7.0",
]
